welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i <- 0 to 3) {if (nums(i) == 9) {return true} else {return false}}
           ^arrayFront9:5: error: type mismatch;
 found   : Unit
 required: Boolean
    for (j <- 0 to nums.length-1) {if (nums(j) == 9) {return true} else {return false}}
           ^